# nerre-llama

./: .gitignore  CONTRIBUTING.md  Instructions.md  README.md  UPDATES.md  download_nerre_weights.py  generate_general_and_mof.py  llama_finetuning.py  multi_node.slurm  process_data.py  pyproject.toml  quickstart.ipynb  requirements-nerre.txt  requirements.txt  step2_predict_llama2.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  feature-request.yml
.github/workflows/: spellcheck.yml
configs/: datasets.py  fsdp.py  peft.py  training.py
docs/: Dataset.md  FAQ.md  LLM_finetuning.md  inference.md  multi_gpu.md  single_gpu.md
ft_datasets/: __init__.py  alpaca_data.json  alpaca_dataset.py  custom_dataset.py  samsum_dataset.py  utils.py
ft_datasets/grammar_dataset/: __init__.py  grammar_dataset.py  grammar_dataset_process.ipynb
inference/: README.md  chat_completion.py  chat_utils.py  checkpoint_converter_fsdp_hf.py  inference.py  safety_utils.py  vLLM_inference.py
inference/hf-text-generation-inference/: README.md
model_checkpointing/: __init__.py
policies/: activation_checkpointing_functions.py  mixed_precision.py  wrapping.py
scripts/spellcheck_conf/: wordlist.txt
utils/: __init__.py  config_utils.py  dataset_utils.py  fsdp_utils.py  memory_utils.py  train_utils.py
